ejercicio calcular descuento

--- a/paginaartista.html
+++ b/paginaartista.html
@@ -7,8 +7,21 @@
     <title>The Weeknd</title>
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
+
+
 <body>
-    <header><h1>The Weeknd</h1></header>
+    <header>
+        <div class="estilo1">
+            <h1>The Weeknd</h1>
+            <button class="">alinicio
+
+            </button>
+            <button class="">alinicio
+
+            </button>
+        </div>
+</header>
+    
     <nav><a href="">Instagram</a>
         <a href="">YouTube</a>
         <p><h2>Bibliografia</h2></p>
